# CMakeList.txt: проект CMake для Лаба 3 2; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (CMakeTarget "Лаба 3 2.cpp" "Лаба 3 2.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
